# browserless-debugger

./: .env.example  README.md  browser.py  cdp_client.py  docker-compose.yml  main.py  pyproject.toml  swagger.json
static/: index.html
